--- a/homework/Day_007_HW.ipynb
+++ b/homework/Day_007_HW.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "YakNatIPj3CW"
    },
@@ -48,36 +48,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "QT4ntMV1kR1c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [0., 1.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#1. 運用上列array計算反矩陣，乘上原矩陣，並觀察是否為單位矩陣?\n",
-    "array1 = np.array([[10, 8], [3, 5]])"
+    "array1 = np.array([[10, 8], [3, 5]])\n",
+    "array1_inv = np.linalg.inv(array1)\n",
+    "np.dot(array1_inv,array1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "9f7cVxwwk-y9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eigenvalues  [13.  2.]\n",
+      "eigenvactors [[ 0.93632918 -0.70710678]\n",
+      " [ 0.35112344  0.70710678]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#2. 運用上列array計算特徵值、特徵向量?"
+    "#2. 運用上列array計算特徵值、特徵向量?\n",
+    "w, v = np.linalg.eig(array1)\n",
+    "print(\"eigenvalues \", w)\n",
+    "print(\"eigenvactors\", v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "OHSs5etxnL8D"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.91663818, -0.39971796],\n",
+       "        [-0.39971796,  0.91663818]]),\n",
+       " array([13.94721714,  1.86417116]),\n",
+       " array([[-0.74319741, -0.6690722 ],\n",
+       "        [-0.6690722 ,  0.74319741]]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#3. 運用上列array計算SVD?"
+    "#3. 運用上列array計算SVD?\n",
+    "np.linalg.svd(array1)"
    ]
   },
   {
