--- a/homework/Day_013_HW.ipynb
+++ b/homework/Day_013_HW.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "id": "BG_bdbRFa6X4"
    },
@@ -388,20 +388,20 @@
     {
      "data": {
       "text/plain": [
-       "math_score       56.9\n",
-       "english_score    62.8\n",
-       "chinese_score    63.1\n",
+       "math_score       74.194221\n",
+       "english_score    78.350301\n",
+       "chinese_score    78.739928\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#承上題，加分後各科班平均\n",
-    "score_df.mean()"
+    "a.mean()"
    ]
   },
   {
