--- a/homework/Day_013_HW.ipynb
+++ b/homework/Day_013_HW.ipynb
@@ -239,13 +239,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "O-TfIm7oaAao"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.833333333333336"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#2. 6號學生3科平均分數是否有贏過班上一半的同學"
+    "#2. 6號學生3科平均分數是否有贏過班上一半的同學\n",
+    "b=score_df.mean(axis=1)\n",
+    "b.median()"
    ]
   },
   {
